		-[Core/LifetimeScoping/Web/Wcf] An ScopedLifestyle abstraction is added and the scoped lifestyles for
		 lifetime scoping web and WCF. This allows the container registration to be oblivious to the actual
		 scoped lifestyle implementation. The ScopedLifestyle class adds an WhenScopeEnds an 
		 RegisterForDisposal method that users can interact with. (work item 19969)
		-[Core] RegisterAll(Type, params Registration[]) overload added to make registring collections using
		 Registration instances more convenient. (work item 20001)
		-[Core] New convenient Lifestyle.CreateRegistration overloads added that allow supplying a single 
		 TConcrete type instead of TService and TImplementation.
		-[Core] Registered collections can now be injected and resolved as IReadOnlyCollection<T> and
		 IReadOnlyList<T> (.NET 4.5 only). (work item 19992).
		-[Diagnostics] Created a public API for querying the container for diagnostic results (work item 20062)

	Changes:
		-[Core] Diagnostics moved into a separate project.

	Bug fixes:
		-[Integration.Mvc] The SimpleInjectorDependencyResolver will now throw a descriptive exception when
		 an unregistered controller can't be created (for whatever reason) instead of allowing null to be
		 returned, since this causes MVC to throw a non-descriptive "Make sure that the controller has a 
		 parameterless public constructor" exception, hiding the real cause. (work item 20097).
		-[Core/LifetimeScoping/Web/Wcf] Instances were disposed in wrong order. (work item 20100)
		

Version 2.3.1 (v2.3.1 RTM)  2013-07-12

	General description:
		This patch release fixes a few bugs in the WCF Integration packages and one bug in the LifetimeScoping
		package.

	Bug fixes:
		-[Integration.Wcf] Lifetime scope was not disposed when object graph construction failed. (work item 19948)
		-[Integration.Wcf] WCF Integration broke WS-Discovery. (work item 19960)